--- a/apps/web/src/styles.css
+++ b/apps/web/src/styles.css
@@ -269,3 +269,15 @@ body {
   width: 200px;
   height: 200px;
 }
+
+/* Preview svg */
+.svg-view-outline::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    outline: 1px dashed rgba(192, 192, 192, 0.8);
+    z-index: 1;
+}
